@@ -1,8 +1,13 @@
-package uk.codery.rules.integration;
+package uk.codery.jspec.integration;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import uk.codery.rules.*;
+import uk.codery.jspec.evaluator.SpecificationEvaluator;
+import uk.codery.jspec.model.CriteriaGroup;
+import uk.codery.jspec.model.Criterion;
+import uk.codery.jspec.model.Junction;
+import uk.codery.jspec.model.Specification;
+import uk.codery.jspec.result.EvaluationOutcome;
 
 import java.util.List;
 import java.util.Map;
@@ -13,7 +18,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * End-to-end integration tests simulating real-world scenarios:
  * - Employment eligibility checks
  * - User access control
- * - Complex business rules
+ * - Complex business criteria
  * - Multi-level nested documents
  */
 class EndToEndTest {
@@ -45,38 +50,38 @@ class EndToEndTest {
         );
 
         // Specification: Must be on UC for 6+ months, unemployed, and seeking work
-        List<Rule> rules = List.of(
-            new Rule("uc-active", Map.of("benefits", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("uc-active", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("status", Map.of("$eq", "ACTIVE"))
             ))),
-            new Rule("uc-duration", Map.of("benefits", Map.of(
+            new Criterion("uc-duration", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("duration_months", Map.of("$gte", 6))
             ))),
-            new Rule("unemployed", Map.of("employment", Map.of(
+            new Criterion("unemployed", Map.of("employment", Map.of(
                 "status", Map.of("$eq", "UNEMPLOYED")
             ))),
-            new Rule("seeking-work", Map.of("employment", Map.of(
+            new Criterion("seeking-work", Map.of("employment", Map.of(
                 "seeking_work", Map.of("$eq", true)
             )))
         );
 
-        RuleSet eligibilitySet = new RuleSet(
+        CriteriaGroup eligibilitySet = new CriteriaGroup(
             "restart-eligible",
-            Operator.AND,
-            List.of(new Rule("uc-active"), new Rule("uc-duration"), new Rule("unemployed"), new Rule("seeking-work"))
+            Junction.AND,
+            List.of(new Criterion("uc-active"), new Criterion("uc-duration"), new Criterion("unemployed"), new Criterion("seeking-work"))
         );
 
         Specification spec = new Specification(
             "restart-programme-eligibility",
-            rules,
+                criteria,
             List.of(eligibilitySet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(citizen, spec);
 
-        assertThat(outcome.summary().matchedRules()).isEqualTo(4);
+        assertThat(outcome.summary().matched()).isEqualTo(4);
         assertThat(outcome.summary().fullyDetermined()).isTrue();
-        assertThat(outcome.ruleSetResults().get(0).matched()).isTrue();
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isTrue();
     }
 
     @Test
@@ -95,38 +100,38 @@ class EndToEndTest {
             )
         );
 
-        List<Rule> rules = List.of(
-            new Rule("uc-active", Map.of("benefits", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("uc-active", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("status", Map.of("$eq", "ACTIVE"))
             ))),
-            new Rule("uc-duration", Map.of("benefits", Map.of(
+            new Criterion("uc-duration", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("duration_months", Map.of("$gte", 6))
             ))),
-            new Rule("unemployed", Map.of("employment", Map.of(
+            new Criterion("unemployed", Map.of("employment", Map.of(
                 "status", Map.of("$eq", "UNEMPLOYED")
             ))),
-            new Rule("seeking-work", Map.of("employment", Map.of(
+            new Criterion("seeking-work", Map.of("employment", Map.of(
                 "seeking_work", Map.of("$eq", true)
             )))
         );
 
-        RuleSet eligibilitySet = new RuleSet(
+        CriteriaGroup eligibilitySet = new CriteriaGroup(
             "restart-eligible",
-            Operator.AND,
-            List.of(new Rule("uc-active"), new Rule("uc-duration"), new Rule("unemployed"), new Rule("seeking-work"))
+            Junction.AND,
+            List.of(new Criterion("uc-active"), new Criterion("uc-duration"), new Criterion("unemployed"), new Criterion("seeking-work"))
         );
 
         Specification spec = new Specification(
             "restart-programme-eligibility",
-            rules,
+                criteria,
             List.of(eligibilitySet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(citizen, spec);
 
-        assertThat(outcome.summary().matchedRules()).isEqualTo(3);
-        assertThat(outcome.summary().notMatchedRules()).isEqualTo(1);
-        assertThat(outcome.ruleSetResults().get(0).matched()).isFalse();
+        assertThat(outcome.summary().matched()).isEqualTo(3);
+        assertThat(outcome.summary().notMatched()).isEqualTo(1);
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isFalse();
     }
 
     @Test
@@ -142,28 +147,28 @@ class EndToEndTest {
             // Missing employment section
         );
 
-        List<Rule> rules = List.of(
-            new Rule("uc-active", Map.of("benefits", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("uc-active", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("status", Map.of("$eq", "ACTIVE"))
             ))),
-            new Rule("uc-duration", Map.of("benefits", Map.of(
+            new Criterion("uc-duration", Map.of("benefits", Map.of(
                 "universal_credit", Map.of("duration_months", Map.of("$gte", 6))
             ))),
-            new Rule("unemployed", Map.of("employment", Map.of(
+            new Criterion("unemployed", Map.of("employment", Map.of(
                 "status", Map.of("$eq", "UNEMPLOYED")
             )))
         );
 
         Specification spec = new Specification(
             "restart-programme-eligibility",
-            rules,
+                criteria,
             List.of()
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(citizen, spec);
 
-        assertThat(outcome.summary().matchedRules()).isEqualTo(1);
-        assertThat(outcome.summary().undeterminedRules()).isEqualTo(2);
+        assertThat(outcome.summary().matched()).isEqualTo(1);
+        assertThat(outcome.summary().undetermined()).isEqualTo(2);
         assertThat(outcome.summary().fullyDetermined()).isFalse();
     }
 
@@ -179,27 +184,27 @@ class EndToEndTest {
             "mfa_enabled", true
         );
 
-        List<Rule> rules = List.of(
-            new Rule("has-admin-role", Map.of("roles", Map.of("$elemMatch", Map.of("$in", List.of("admin", "superuser"))))),
-            new Rule("account-active", Map.of("status", Map.of("$eq", "ACTIVE"))),
-            new Rule("mfa-enabled", Map.of("mfa_enabled", Map.of("$eq", true)))
+        List<Criterion> criteria = List.of(
+            new Criterion("has-admin-role", Map.of("roles", Map.of("$elemMatch", Map.of("$in", List.of("admin", "superuser"))))),
+            new Criterion("account-active", Map.of("status", Map.of("$eq", "ACTIVE"))),
+            new Criterion("mfa-enabled", Map.of("mfa_enabled", Map.of("$eq", true)))
         );
 
-        RuleSet adminAccessSet = new RuleSet(
+        CriteriaGroup adminAccessSet = new CriteriaGroup(
             "admin-access",
-            Operator.AND,
-            List.of(new Rule("has-admin-role"), new Rule("account-active"), new Rule("mfa-enabled"))
+            Junction.AND,
+            List.of(new Criterion("has-admin-role"), new Criterion("account-active"), new Criterion("mfa-enabled"))
         );
 
         Specification spec = new Specification(
             "admin-access-control",
-            rules,
+                criteria,
             List.of(adminAccessSet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(user, spec);
 
-        assertThat(outcome.ruleSetResults().get(0).matched()).isTrue();
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isTrue();
     }
 
     @Test
@@ -212,37 +217,37 @@ class EndToEndTest {
             "verified_email", true
         );
 
-        List<Rule> rules = List.of(
-            new Rule("has-admin-role", Map.of("roles", Map.of("$in", List.of("admin", "superuser")))),
-            new Rule("has-user-role", Map.of("roles", Map.of("$elemMatch", Map.of("$in", List.of("user"))))),
-            new Rule("account-active", Map.of("status", Map.of("$eq", "ACTIVE"))),
-            new Rule("email-verified", Map.of("verified_email", Map.of("$eq", true)))
+        List<Criterion> criteria = List.of(
+            new Criterion("has-admin-role", Map.of("roles", Map.of("$in", List.of("admin", "superuser")))),
+            new Criterion("has-user-role", Map.of("roles", Map.of("$elemMatch", Map.of("$in", List.of("user"))))),
+            new Criterion("account-active", Map.of("status", Map.of("$eq", "ACTIVE"))),
+            new Criterion("email-verified", Map.of("verified_email", Map.of("$eq", true)))
         );
 
-        RuleSet adminAccessSet = new RuleSet(
+        CriteriaGroup adminAccessSet = new CriteriaGroup(
             "admin-access",
-            Operator.AND,
-            List.of(new Rule("has-admin-role"), new Rule("account-active"))
+            Junction.AND,
+            List.of(new Criterion("has-admin-role"), new Criterion("account-active"))
         );
 
-        RuleSet userAccessSet = new RuleSet(
+        CriteriaGroup userAccessSet = new CriteriaGroup(
             "user-access",
-            Operator.AND,
-            List.of(new Rule("has-user-role"), new Rule("account-active"), new Rule("email-verified"))
+            Junction.AND,
+            List.of(new Criterion("has-user-role"), new Criterion("account-active"), new Criterion("email-verified"))
         );
 
         Specification spec = new Specification(
             "access-control",
-            rules,
+                criteria,
             List.of(adminAccessSet, userAccessSet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(user, spec);
 
         // Admin access should fail, user access should succeed
-        assertThat(outcome.ruleSetResults()).hasSize(2);
-        assertThat(outcome.ruleSetResults().get(0).matched()).isFalse(); // admin-access
-        assertThat(outcome.ruleSetResults().get(1).matched()).isTrue();  // user-access
+        assertThat(outcome.criteriaGroupResults()).hasSize(2);
+        assertThat(outcome.criteriaGroupResults().get(0).matched()).isFalse(); // admin-access
+        assertThat(outcome.criteriaGroupResults().get(1).matched()).isTrue();  // user-access
     }
 
     // ========== E-commerce Discount Scenario ==========
@@ -265,31 +270,31 @@ class EndToEndTest {
             "promotion_code", "SUMMER2024"
         );
 
-        List<Rule> rules = List.of(
-            new Rule("loyal-customer", Map.of("customer", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("loyal-customer", Map.of("customer", Map.of(
                 "member_since_years", Map.of("$gte", 2)
             ))),
-            new Rule("minimum-purchase", Map.of("cart", Map.of(
+            new Criterion("minimum-purchase", Map.of("cart", Map.of(
                 "total", Map.of("$gte", 100.00)
             ))),
-            new Rule("valid-promo", Map.of("promotion_code", Map.of("$exists", true)))
+            new Criterion("valid-promo", Map.of("promotion_code", Map.of("$exists", true)))
         );
 
-        RuleSet discountSet = new RuleSet(
+        CriteriaGroup discountSet = new CriteriaGroup(
             "loyalty-discount",
-            Operator.AND,
-            List.of(new Rule("loyal-customer"), new Rule("minimum-purchase"), new Rule("valid-promo"))
+            Junction.AND,
+            List.of(new Criterion("loyal-customer"), new Criterion("minimum-purchase"), new Criterion("valid-promo"))
         );
 
         Specification spec = new Specification(
             "discount-eligibility",
-            rules,
+                criteria,
             List.of(discountSet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(order, spec);
 
-        assertThat(outcome.ruleSetResults().get(0).matched()).isTrue();
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isTrue();
     }
 
     // ========== Content Moderation Scenario ==========
@@ -310,38 +315,38 @@ class EndToEndTest {
             )
         );
 
-        List<Rule> rules = List.of(
-            new Rule("low-reputation", Map.of("author", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("low-reputation", Map.of("author", Map.of(
                 "reputation_score", Map.of("$lt", 50)
             ))),
-            new Rule("new-account", Map.of("author", Map.of(
+            new Criterion("new-account", Map.of("author", Map.of(
                 "account_age_days", Map.of("$lt", 30)
             ))),
-            new Rule("has-reports", Map.of("metadata", Map.of(
+            new Criterion("has-reports", Map.of("metadata", Map.of(
                 "reports", Map.of("$gt", 0)
             ))),
-            new Rule("suspicious-content", Map.of("content", Map.of(
+            new Criterion("suspicious-content", Map.of("content", Map.of(
                 "$regex", ".*(suspicious|test|spam).*"
             )))
         );
 
-        RuleSet moderationSet = new RuleSet(
+        CriteriaGroup moderationSet = new CriteriaGroup(
             "needs-review",
-            Operator.OR,
-            List.of(new Rule("low-reputation"), new Rule("new-account"), new Rule("has-reports"), new Rule("suspicious-content"))
+            Junction.OR,
+            List.of(new Criterion("low-reputation"), new Criterion("new-account"), new Criterion("has-reports"), new Criterion("suspicious-content"))
         );
 
         Specification spec = new Specification(
             "content-moderation",
-            rules,
+                criteria,
             List.of(moderationSet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(post, spec);
 
         // Should match because multiple flags are triggered
-        assertThat(outcome.ruleSetResults().get(0).matched()).isTrue();
-        assertThat(outcome.summary().matchedRules()).isGreaterThan(1);
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isTrue();
+        assertThat(outcome.summary().matched()).isGreaterThan(1);
     }
 
     // ========== Complex Nested Document Scenario ==========
@@ -375,45 +380,45 @@ class EndToEndTest {
             )
         );
 
-        List<Rule> rules = List.of(
-            new Rule("age-requirement", Map.of("applicant", Map.of(
+        List<Criterion> criteria = List.of(
+            new Criterion("age-requirement", Map.of("applicant", Map.of(
                 "personal", Map.of("age", Map.of("$gte", 18, "$lte", 65))
             ))),
-            new Rule("uk-resident", Map.of("applicant", Map.of(
+            new Criterion("uk-resident", Map.of("applicant", Map.of(
                 "personal", Map.of("address", Map.of("country", Map.of("$eq", "UK")))
             ))),
-            new Rule("income-verified", Map.of("applicant", Map.of(
+            new Criterion("income-verified", Map.of("applicant", Map.of(
                 "financial", Map.of("income", Map.of("verified", Map.of("$eq", true)))
             ))),
-            new Rule("minimum-income", Map.of("applicant", Map.of(
+            new Criterion("minimum-income", Map.of("applicant", Map.of(
                 "financial", Map.of("income", Map.of("annual_salary", Map.of("$gte", 25000)))
             ))),
-            new Rule("credit-score-check", Map.of("applicant", Map.of(
+            new Criterion("credit-score-check", Map.of("applicant", Map.of(
                 "financial", Map.of("credit_score", Map.of("$gte", 650))
             ))),
-            new Rule("loan-amount-reasonable", Map.of("loan", Map.of(
+            new Criterion("loan-amount-reasonable", Map.of("loan", Map.of(
                 "amount", Map.of("$lte", 50000)
             )))
         );
 
-        RuleSet approvalSet = new RuleSet(
+        CriteriaGroup approvalSet = new CriteriaGroup(
             "loan-approval",
-            Operator.AND,
-            List.of(new Rule("age-requirement"), new Rule("uk-resident"), new Rule("income-verified"),
-                    new Rule("minimum-income"), new Rule("credit-score-check"), new Rule("loan-amount-reasonable"))
+            Junction.AND,
+            List.of(new Criterion("age-requirement"), new Criterion("uk-resident"), new Criterion("income-verified"),
+                    new Criterion("minimum-income"), new Criterion("credit-score-check"), new Criterion("loan-amount-reasonable"))
         );
 
         Specification spec = new Specification(
             "loan-application-review",
-            rules,
+                criteria,
             List.of(approvalSet)
         );
 
         EvaluationOutcome outcome = evaluator.evaluate(application, spec);
 
-        assertThat(outcome.summary().matchedRules()).isEqualTo(6);
+        assertThat(outcome.summary().matched()).isEqualTo(6);
         assertThat(outcome.summary().fullyDetermined()).isTrue();
-        assertThat(outcome.ruleSetResults().get(0).matched()).isTrue();
+        assertThat(outcome.criteriaGroupResults().getFirst().matched()).isTrue();
     }
 
     // ========== Mixed Success/Failure Scenario ==========
@@ -426,66 +431,66 @@ class EndToEndTest {
             "field3", List.of("a", "b", "c")
         );
 
-        List<Rule> rules = List.of(
-            new Rule("match1", Map.of("field1", Map.of("$eq", "value1"))),
-            new Rule("match2", Map.of("field2", Map.of("$gte", 50))),
-            new Rule("no-match", Map.of("field2", Map.of("$lt", 50))),
-            new Rule("undetermined", Map.of("field4", Map.of("$eq", "value4"))),
-            new Rule("match3", Map.of("field3", Map.of("$size", 3)))
+        List<Criterion> criteria = List.of(
+            new Criterion("match1", Map.of("field1", Map.of("$eq", "value1"))),
+            new Criterion("match2", Map.of("field2", Map.of("$gte", 50))),
+            new Criterion("no-match", Map.of("field2", Map.of("$lt", 50))),
+            new Criterion("undetermined", Map.of("field4", Map.of("$eq", "value4"))),
+            new Criterion("match3", Map.of("field3", Map.of("$size", 3)))
         );
 
-        Specification spec = new Specification("mixed-spec", rules, List.of());
+        Specification spec = new Specification("mixed-spec", criteria, List.of());
 
         EvaluationOutcome outcome = evaluator.evaluate(data, spec);
 
-        assertThat(outcome.summary().totalRules()).isEqualTo(5);
-        assertThat(outcome.summary().matchedRules()).isEqualTo(3);
-        assertThat(outcome.summary().notMatchedRules()).isEqualTo(1);
-        assertThat(outcome.summary().undeterminedRules()).isEqualTo(1);
+        assertThat(outcome.summary().total()).isEqualTo(5);
+        assertThat(outcome.summary().matched()).isEqualTo(3);
+        assertThat(outcome.summary().notMatched()).isEqualTo(1);
+        assertThat(outcome.summary().undetermined()).isEqualTo(1);
         assertThat(outcome.summary().fullyDetermined()).isFalse();
     }
 
-    // ========== Performance Test with Many Rules ==========
+    // ========== Performance Test with Many Criteria ==========
 
     @Test
-    void performance_withManyRules_shouldEvaluateEfficiently() {
+    void performance_withManyCriteria_shouldEvaluateEfficiently() {
         Map<String, Object> doc = Map.of(
             "value", 50,
             "status", "ACTIVE",
             "tags", List.of("tag1", "tag2", "tag3")
         );
 
-        // Create 20 rules to test parallel evaluation
-        List<Rule> rules = List.of(
-            new Rule("r1", Map.of("value", Map.of("$gte", 0))),
-            new Rule("r2", Map.of("value", Map.of("$lte", 100))),
-            new Rule("r3", Map.of("value", Map.of("$gt", 25))),
-            new Rule("r4", Map.of("value", Map.of("$lt", 75))),
-            new Rule("r5", Map.of("status", Map.of("$eq", "ACTIVE"))),
-            new Rule("r6", Map.of("status", Map.of("$ne", "INACTIVE"))),
-            new Rule("r7", Map.of("status", Map.of("$in", List.of("ACTIVE", "PENDING")))),
-            new Rule("r8", Map.of("tags", Map.of("$size", 3))),
-            new Rule("r9", Map.of("tags", Map.of("$all", List.of("tag1")))),
-            new Rule("r10", Map.of("tags", Map.of("$in", List.of("tag2")))),
-            new Rule("r11", Map.of("value", Map.of("$eq", 50))),
-            new Rule("r12", Map.of("value", Map.of("$ne", 0))),
-            new Rule("r13", Map.of("status", Map.of("$exists", true))),
-            new Rule("r14", Map.of("status", Map.of("$type", "string"))),
-            new Rule("r15", Map.of("value", Map.of("$type", "number"))),
-            new Rule("r16", Map.of("tags", Map.of("$type", "array"))),
-            new Rule("r17", Map.of("status", Map.of("$regex", "ACTIVE"))),
-            new Rule("r18", Map.of("value", Map.of("$gte", 1, "$lte", 99))),
-            new Rule("r19", Map.of("tags", Map.of("$all", List.of("tag1", "tag2")))),
-            new Rule("r20", Map.of("status", Map.of("$nin", List.of("DELETED", "ARCHIVED"))))
+        // Create 20 criteria to test parallel evaluation
+        List<Criterion> criteria = List.of(
+            new Criterion("r1", Map.of("value", Map.of("$gte", 0))),
+            new Criterion("r2", Map.of("value", Map.of("$lte", 100))),
+            new Criterion("r3", Map.of("value", Map.of("$gt", 25))),
+            new Criterion("r4", Map.of("value", Map.of("$lt", 75))),
+            new Criterion("r5", Map.of("status", Map.of("$eq", "ACTIVE"))),
+            new Criterion("r6", Map.of("status", Map.of("$ne", "INACTIVE"))),
+            new Criterion("r7", Map.of("status", Map.of("$in", List.of("ACTIVE", "PENDING")))),
+            new Criterion("r8", Map.of("tags", Map.of("$size", 3))),
+            new Criterion("r9", Map.of("tags", Map.of("$all", List.of("tag1")))),
+            new Criterion("r10", Map.of("tags", Map.of("$in", List.of("tag2")))),
+            new Criterion("r11", Map.of("value", Map.of("$eq", 50))),
+            new Criterion("r12", Map.of("value", Map.of("$ne", 0))),
+            new Criterion("r13", Map.of("status", Map.of("$exists", true))),
+            new Criterion("r14", Map.of("status", Map.of("$type", "string"))),
+            new Criterion("r15", Map.of("value", Map.of("$type", "number"))),
+            new Criterion("r16", Map.of("tags", Map.of("$type", "array"))),
+            new Criterion("r17", Map.of("status", Map.of("$regex", "ACTIVE"))),
+            new Criterion("r18", Map.of("value", Map.of("$gte", 1, "$lte", 99))),
+            new Criterion("r19", Map.of("tags", Map.of("$all", List.of("tag1", "tag2")))),
+            new Criterion("r20", Map.of("status", Map.of("$nin", List.of("DELETED", "ARCHIVED"))))
         );
 
-        Specification spec = new Specification("performance-spec", rules, List.of());
+        Specification spec = new Specification("performance-spec", criteria, List.of());
 
         EvaluationOutcome outcome = evaluator.evaluate(doc, spec);
 
-        assertThat(outcome.ruleResults()).hasSize(20);
+        assertThat(outcome.evaluationResults()).hasSize(20);
         assertThat(outcome.summary().fullyDetermined()).isTrue();
         // Most should match given the document structure
-        assertThat(outcome.summary().matchedRules()).isGreaterThan(15);
+        assertThat(outcome.summary().matched()).isGreaterThan(15);
     }
 }
